# sagarmatha-screensaver

./: HACKING  NEWS  README  README.md  autogen.sh  configure.ac  makepot  sagarmatha-screensaver.pot
data/: Makefile.am  org.sagarmatha.ScreenSaver.service.in  sagarmatha-screensaver-command.1  sagarmatha-screensaver.1  sagarmatha-screensaver.xml  sagarmatha-screensaver.xml.in
debian/: README.Debian  changelog  control  control.in  copyright  rules  sagarmatha-screensaver.docs  sagarmatha-screensaver.postinst
doc/: dbus-interface.html
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am  bus.h  debug-screensaver.sh  gnome-wall-clock.c  gs-debug.c  gs-fade.c  gs-grab-x11.c  gs-listener-dbus.c  gs-manager.c  gs-monitor.c  gs-prefs.c  gs-window-x11.c  sagarmatha-screensaver-command.c  sagarmatha-screensaver-dialog.c  sagarmatha-screensaver.c  sagarmatha-screensaver.desktop.in  sagarmatha-screensaver.desktop.in.in  sagarmatha-screensaver.h  test-fade.c  test-passwd.c  test-watcher.c  test-window.c
